fix squared image and hide to top on mobile view.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -124,10 +124,13 @@
 
 @media screen and (max-width: 480px) {
   .ad {
-    .img-responsive(block);
+    width: 100%;
+    height: auto;
     margin: 10px 0;
   }
   .ad-img img {
-    .img-responsive(block);
+    width: 100%;
+    height: auto;
+    display: block;
   }
 }
